force-app/main/default/objects/Integration_Error_Log__c/Integration_Error_Log__c.object-meta.xml
<CustomObject>
    <description>This object will host integration errors for entire org to troubleshoot issues that prevent processes from running</description>
    <label>Integration Error Log</label>
    <nameField>
        <label>Integration Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>