force-app/main/default/objects/Integration_Error_Log__c/fields/giic_Account__c.field-meta.xml
<CustomField>
    <fullName>giic_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Map Account ID when Error will be generated</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>