force-app/main/default/objects/Integration_Error_Log__c/fields/giic_ARCredit__c.field-meta.xml
<CustomField>
    <fullName>giic_ARCredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Credit</label>
    <referenceTo>gii__ARCredit__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>