force-app/main/default/objects/Integration_Error_Log__c/fields/giic_ForwardToInvoiceQueue__c.field-meta.xml
<CustomField>
    <fullName>giic_ForwardToInvoiceQueue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forward To Invoice Queue</label>
    <referenceTo>gii__ForwardToInvoiceQueue__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>