force-app/main/default/objects/Integration_Error_Log__c/fields/giic_Invoice__c.field-meta.xml
<CustomField>
    <fullName>giic_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>error log for invoice</description>
    <label>Invoice</label>
    <referenceTo>gii__OrderInvoice__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>IntegrationErrors</relationshipName>
    <type>Lookup</type>
</CustomField>