force-app/main/default/objects/Integration_Error_Log__c/fields/giic_IsActive__c.field-meta.xml
<CustomField>
    <fullName>giic_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>