force-app/main/default/objects/Integration_Error_Log__c/fields/giic_Promotion__c.field-meta.xml
<CustomField>
    <fullName>giic_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>gii__Promotion__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>