force-app/main/default/objects/Integration_Error_Log__c/fields/giic_SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>giic_SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to Sales Order Id</description>
    <label>Sales Order</label>
    <referenceTo>gii__SalesOrder__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>