force-app/main/default/objects/Integration_Error_Log__c/fields/giic_SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>giic_SalesOrderLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to sales order line</description>
    <label>Sales Order Line</label>
    <referenceTo>gii__SalesOrderLine__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>