force-app/main/default/objects/Integration_Error_Log__c/fields/giic_SalesOrderLineStaging__c.field-meta.xml
<CustomField>
    <fullName>giic_SalesOrderLineStaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line Staging</label>
    <referenceTo>gii__SalesOrderLineStaging__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>