force-app/main/default/objects/Integration_Error_Log__c/fields/giic_SalesOrderStaging__c.field-meta.xml
<CustomField>
    <fullName>giic_SalesOrderStaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Staging</label>
    <referenceTo>gii__SalesOrderStaging__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>