force-app/main/default/objects/Integration_Error_Log__c/fields/giic_TransferOrder__c.field-meta.xml
<CustomField>
    <fullName>giic_TransferOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Order</label>
    <referenceTo>gii__TransferOrder__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>