force-app/main/default/objects/Integration_Error_Log__c/fields/giic_TransferOrderLine__c.field-meta.xml
<CustomField>
    <fullName>giic_TransferOrderLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Order  Line</label>
    <referenceTo>gii__TransferOrderLine__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>