force-app/main/default/objects/Integration_Error_Log__c/listViews/Integration_Error_by_Date.listView-meta.xml
<ListView>
    <fullName>Integration_Error_by_Date</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration Error by Date</label>
</ListView>